Migração da funcionalidade de relatórios para um app separado (relatorios)
- Movido todas as funcionalidades de relatórios do app analises para o novo app relatorios
- Criados templates, views e URLs dedicados para relatórios
- Atualizado navegação em todos os templates
- Limpado código do app analises
- Corrigido nomes de URLs e referências

--- a/analises/templates/base.html
+++ b/analises/templates/base.html
@@ -59,19 +59,19 @@
         <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
             <ul class="navbar-nav ms-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'umidade_list' %}"> Análise Umidade</a>
+                    <a class="nav-link" href="{% url 'analises:umidade_list' %}"> Análise Umidade</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'umidade_create' %}"> Cadastrar Umidade</a>
+                    <a class="nav-link" href="{% url 'analises:umidade_create' %}"> Cadastrar Umidade</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'proteina_list' %}"> Analise Proteina</a>
+                    <a class="nav-link" href="{% url 'analises:proteina_list' %}"> Analise Proteina</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'proteina_create' %}"> Cadastrar Proteina</a>
+                    <a class="nav-link" href="{% url 'analises:proteina_create' %}"> Cadastrar Proteina</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'listar_relatorios' %}"> Relatórios</a>
+                    <a class="nav-link" href="{% url 'relatorios:dashboard' %}"> Relatórios</a>
                 </li> 
             </ul>
         </div>
