--- a/relatorios/templates/relatorios/gerar_relatorio.html
+++ b/relatorios/templates/relatorios/gerar_relatorio.html
@@ -111,7 +111,7 @@
                         </div>
 
                         <div class="d-flex justify-content-between mt-4">
-                            <a href="{% url 'listar_relatorios' %}" class="btn btn-secondary btn-lg">
+                            <a href="{% url 'relatorios:dashboard' %}" class="btn btn-secondary btn-lg">
                                 Voltar
                             </a>
                             <button type="submit" class="btn btn-success btn-lg">
