--- a/relatorios/templates/relatorios/visualizar_relatorio.html
+++ b/relatorios/templates/relatorios/visualizar_relatorio.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-md-4 text-end">
             <div class="btn-group">
-                <a href="{% url 'gerar_relatorio' %}" class="btn btn-secondary">
+                <a href="{% url 'relatorios:gerar' %}" class="btn btn-secondary">
                     Voltar
                 </a>
                 {% if formato == 'HTML' %}
@@ -265,7 +265,7 @@
         <h4>Nenhum dado encontrado</h4>
         <p class="mb-0">Não foram encontradas análises para o período e filtros selecionados.</p>
         <p class="mt-3">
-            <a href="{% url 'gerar_relatorio' %}" class="btn btn-primary">
+            <a href="{% url 'relatorios:gerar' %}" class="btn btn-primary">
                 Voltar e tentar outros filtros
             </a>
         </p>
@@ -348,5 +348,6 @@
 </script>
 
 <!-- Script para renderizar os gráficos -->
-<script src="/static/geral/js/relatorio_charts.js"></script>
+{% load static %}
+<script src="{% static 'relatorios/js/relatorio_charts.js' %}"></script>
 {% endblock %}
