--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <title>QualiSoja</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    {% block extra_css %}{% endblock %}
     <style>
         .navbar-brand {
             display: flex;
@@ -59,19 +62,19 @@
         <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
             <ul class="navbar-nav ms-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'umidade_list' %}">Análise Umidade</a>
+                    <a class="nav-link" href="{% url 'analises:umidade_list' %}">Análise Umidade</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'umidade_create' %}">Cadastrar Umidade</a>
+                    <a class="nav-link" href="{% url 'analises:umidade_create' %}">Cadastrar Umidade</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'proteina_list' %}">Análise Proteina</a>
+                    <a class="nav-link" href="{% url 'analises:proteina_list' %}">Análise Proteina</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'proteina_create' %}">Cadastrar Proteina</a>
+                    <a class="nav-link" href="{% url 'analises:proteina_create' %}">Cadastrar Proteina</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'listar_relatorios' %}">Relatórios</a>
+                    <a class="nav-link" href="{% url 'relatorios:dashboard' %}">Relatórios</a>
                 </li>
             </ul>
         </div>
@@ -83,5 +86,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+{% block extra_js %}{% endblock %}
 </body>
 </html>
