--- a/users/templates/cadastro.html
+++ b/users/templates/cadastro.html
@@ -6,7 +6,7 @@
 {% block 'body' %}
   <h1>Cadastro</h1>
   <p>Preencha os dados abaixo para se cadastrar no sistema</p>
-  <form action="{% url 'cadastro' %}" method="POST">
+  <form action="{% url 'users:cadastro' %}" method="POST">
     {% csrf_token %}
     <div class="form-group">
       <label for="nome">Nome</label>
@@ -22,7 +22,7 @@
         <option value="">Selecione...</option>
         <option value="analista">Analista</option>
         <option value="producao">Produção</option>
-        <option value="classificacao-producao">Classificação - Produção</option>
+    <!--  <option value="classificacao-producao">Classificação - Produção</option> --> 
       </select>
     </div>
     <div class="form-group">
