--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -6,11 +6,11 @@
 {% block 'body' %}
   <h1>Login</h1>
   <p>Preencha os dados abaixo para entrar no sistema</p>
-  <form action="{% url 'login' %}" method="POST">
+  <form action="{% url 'users:login' %}" method="POST">
     {% csrf_token %}
     <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" name="email" id="email" required>
+      <label for="username">Nome de Usuário</label>
+      <input type="username" name="username" id="username" required>
     </div>
     <div class="form-group">
       <label for="senha">Senha</label>
