--- a/analises/templates/app/cadastro_oleo.html
+++ b/analises/templates/app/cadastro_oleo.html
@@ -11,6 +11,13 @@
     <div class="card-body">
         <form method="post" class="needs-validation" novalidate>
             {% csrf_token %}
+            {% if form.non_field_errors %}
+                <div class="alert alert-danger">
+                    {% for error in form.non_field_errors %}
+                        <div>{{ error }}</div>
+                    {% endfor %}
+                 </div>
+            {% endif %}    
             
             <div class="row g-3">
                 <!-- Primeira linha -->
