feat:implementando arquibo 'base_producao' usada para limitar o acesso do usuario de produçao (#43)

--- a/relatorios/templates/relatorios/gerar_relatorio.html
+++ b/relatorios/templates/relatorios/gerar_relatorio.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_producao.html" %}
 {% load widget_tweaks %}
 
 {% block title %}Gerador de Relatórios - QualiSoja{% endblock %}
