--- a/relatorios/templates/relatorios/gerar_relatorio.html
+++ b/relatorios/templates/relatorios/gerar_relatorio.html
@@ -1,4 +1,4 @@
-{% extends "base_producao.html" %}
+{% extends "base.html" %}
 {% load widget_tweaks %}
 
 {% block title %}Gerador de Relatórios - QualiSoja{% endblock %}
