--- a/relatorios/templates/relatorios/gerar_relatorio_moderno.html
+++ b/relatorios/templates/relatorios/gerar_relatorio_moderno.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+
+{% load static %}
 {% load widget_tweaks %}
 
 {% block title %}Gerador de Relatórios - QualiSoja{% endblock %}
