--- a/templates/base.html
+++ b/templates/base.html
@@ -58,27 +58,33 @@
         </button>
         <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
             <ul class="navbar-nav ms-3">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'analises:umidade_list' %}">Análise Umidade</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'analises:umidade_create' %}">Cadastrar Umidade</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'analises:proteina_list' %}">Análise Proteina</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'analises:proteina_create' %}">Cadastrar Proteina</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'relatorios:gerar' %}">Relatórios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'analises:oleo_list' %}">Análise Óleo Degomado</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'analises:oleo_create' %}">Cadastrar Óleo Degomado</a>
-                </li>
+                 {% if user.is_authenticated %}
+                    {% if user|in_group:"Analista" or user.is_superuser %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'analises:umidade_list' %}">Análise Umidade</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'analises:umidade_create' %}">Cadastrar Umidade</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="{% url 'analises:proteina_list' %}">Análise Proteina</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'analises:proteina_create' %}">Cadastrar Proteina</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'analises:oleo_list' %}">Análise Óleo Degomado</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'analises:oleo_create' %}">Cadastrar Óleo Degomado</a>
+                        </li>
+                    {% endif %}
+                    {% if user|in_group:"Produção" %}
+                        <li class="nav-item">
+                         <a class="nav-link" href="{% url 'relatorios:gerar' %}">Relatórios</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
             </ul>
 
             <ul class="navbar-nav ms-auto">
