Resovendo bugs da interface de relatorios

--- a/relatorios/templates/relatorios/gerar_relatorio.html
+++ b/relatorios/templates/relatorios/gerar_relatorio.html
@@ -1391,7 +1391,7 @@
                 </div>
 
                 <div class="d-flex justify-content-between align-items-center mt-4 pt-3">
-                    <a href="{% url 'home' %}" class="btn btn-outline-secondary">
+                    <a href="{% url 'analises:home' %}" class="btn btn-outline-secondary">
                         <i class="fas fa-home me-2"></i>Voltar à Página Inicial
                     </a>
                     <div class="d-flex gap-2">
