--- a/templates/home.html
+++ b/templates/home.html
@@ -371,7 +371,7 @@
         <div class="row align-items-center">
             <div class="col-md-8">
                 <h1 class="mb-3">
-                    <a href="{% url 'home' %}" class="text-decoration-none text-white d-flex align-items-center" style="color: inherit;">
+                    <a href="{% url 'analises:home' %}" class="text-decoration-none text-white d-flex align-items-center" style="color: inherit;">
                         <i class="fas fa-tachometer-alt me-3"></i>
                         Painel de Controle QualiSoja
                     </a>
