--- a/analises/templates/app/home_analises.html
+++ b/analises/templates/app/home_analises.html
@@ -67,7 +67,7 @@
                             </a>
                         </div>
                         <div class="col-md-6">
-                            <a href="{% url 'home' %}" class="btn btn-secondary w-100 mb-2">
+                            <a href="{% url 'analises:home' %}" class="btn btn-secondary w-100 mb-2">
                                 <i class="bi bi-house me-2"></i>Voltar à Página Inicial
                             </a>
                         </div>
