--- a/relatorios/templates/relatorios/gerar_relatorio_classico.html
+++ b/relatorios/templates/relatorios/gerar_relatorio_classico.html
@@ -114,7 +114,7 @@
                         </div>
 
                         <div class="d-flex justify-content-between mt-4">
-                            <a href="{% url 'home' %}" class="btn btn-secondary btn-lg">
+                            <a href="{% url 'analises:home' %}" class="btn btn-secondary btn-lg">
                                 <i class="fas fa-home me-2"></i>Voltar à Página Inicial
                             </a>
                             <button type="submit" class="btn btn-success btn-lg">
